# scrapping_test

./: .pre-commit-config.yaml  pyproject.toml  scraper.py  script.py
data/: data.json
