[tool.poetry]
name = "scrapping"
version = "0.1.0"
description = ""
authors = ["razmanov666 <razmanov666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
requests = "^2.28.2"
types-requests = "^2.28.11.8"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
